--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
   </head>
   <body>
     <div class="navbar notif" id="notif">
-      This is a Official Merit list of last <span class='important'>2024 Jan</span> Induction<br>
-      <span class='important'>Click on Check Consent to check Candidate Consent</span><br>
-    </div>
+      Estimated Merit List of <span class='important'>2025 Jan</span> Induction<br>   will be uploaded on 9/1/25 in evening based on official Gazette  <span class='important'>  </div>
     <nav class="navbar">
       <div class="logo-container">
         <img class="logo" onclick="gotoUrl()"src="logo.png" />
@@ -319,7 +317,7 @@
     meritData.MD = prevMdMeritList;
     candData = prevcandList;
     changeMeritList()
-    changeNotification("Estimated Merit List of <span class='important'>2025 Jan</span> Induction<br>   will be uploaded on 9/1/25 in evening based on official Gazette  <span class='important'>Click on Check Consent to check Candidate Consent</span><br></br>")
+    changeNotification("Estimated Merit List of <span class='important'>2025 Jan</span> Induction<br>   will be uploaded on 9/1/25 in evening based on official Gazette  <span class='important'>")
     $('.slidertext').css({'color': 'white','font-weight': 'light', 'filter': 'drop-shadow(0px 0px 0px #107e47)', 'transition-duration': '1s'})
     
 
