estimated merit list

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <div class="navbar notif" id="notif">
-      Estimated Merit List of <span class='important'>2025 Jan</span> Induction<br>   will be uploaded on 9/1/25 in evening based on official Gazette  <span class='important'>  </div>
+      This is the Estimated Merit List of <span class='important'>2025 Jan</span> Induction<br>Accuracy of unofficial merit list has been displayed below<span class='important'>  </div>
     <nav class="navbar">
       <div class="logo-container">
         <img class="logo" onclick="gotoUrl()"src="logo.png" />
@@ -34,17 +34,17 @@
         <div class="counter">
           <div id="FCPS" class="counter-value">500</div>
           <div class="counter-text">FCPS</div>
-          <div class="counter-desc">Accuracy of Estimated Merit List</div>
+          <div class="counter-desc">Accuracy of Unofficial Merit List</div>
         </div>
         <div class="counter">
           <div id="MD" class="counter-value">500</div>
           <div class="counter-text">MD</div>
-          <div class="counter-desc">Accuracy of Estimated Merit List</div>
+          <div class="counter-desc">Accuracy of Unofficial Merit List</div>
         </div>
         <div class="counter">
           <div id="MS" class="counter-value">500</div>
           <div class="counter-text">MS</div>
-          <div class="counter-desc">Accuracy of Estimated Merit List</div>
+          <div class="counter-desc">Accuracy of Unofficial Merit List</div>
         </div>
       
       </div>
@@ -317,7 +317,7 @@
     meritData.MD = prevMdMeritList;
     candData = prevcandList;
     changeMeritList()
-    changeNotification("Estimated Merit List of <span class='important'>2025 Jan</span> Induction<br>   will be uploaded on 9/1/25 in evening based on official Gazette  <span class='important'>")
+    changeNotification(" This is the Estimated Merit List of <span class='important'>2025 Jan</span> Induction<br>Accuracy of unofficial merit list has been displayed below<span class='important'>  </div>")
     $('.slidertext').css({'color': 'white','font-weight': 'light', 'filter': 'drop-shadow(0px 0px 0px #107e47)', 'transition-duration': '1s'})
     
 
