--- a/index.html
+++ b/index.html
@@ -34,17 +34,17 @@
         <div class="counter">
           <div id="FCPS" class="counter-value">500</div>
           <div class="counter-text">FCPS</div>
-          <div class="counter-desc">Accuracy of Unofficial Merit List</div>
+          <div class="counter-desc">Accuracy of Unofficial Gazette</div>
         </div>
         <div class="counter">
           <div id="MD" class="counter-value">500</div>
           <div class="counter-text">MD</div>
-          <div class="counter-desc">Accuracy of Unofficial Merit List</div>
+          <div class="counter-desc">Accuracy of Unofficial Gazette</div>
         </div>
         <div class="counter">
           <div id="MS" class="counter-value">500</div>
           <div class="counter-text">MS</div>
-          <div class="counter-desc">Accuracy of Unofficial Merit List</div>
+          <div class="counter-desc">Accuracy of Unofficial Gazette</div>
         </div>
       
       </div>
