--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <div class="navbar notif" id="notif">
-      This is the Estimated Merit List of <span class='important'>2025 Jan</span> Induction<br>Accuracy of unofficial merit list has been displayed below<span class='important'>  </div>
+      This is the Estimated Merit List of <span class='important'>2025 Jan</span> Induction based on Official Gazette<br>Accuracy of unofficial Gazette has been displayed below<span class='important'>  </div>
     <nav class="navbar">
       <div class="logo-container">
         <img class="logo" onclick="gotoUrl()"src="logo.png" />
