--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </label><span class="slidertext"> 2025 Unofficial Merit List</span> 
       </div>  
        -->
-      
+        <h3 class="title">Estimated Merit List based on Official Gazette</h3>
         <div class="alert">
           <h3 class="alert-title">Merit List Issue</h3>
           <p class="alert-content">There is issue with MS and MD merit list, where <br>MS applicants <span class="important">7254, 24793, 21123, 29533, 28483, 28584, 17828, 23330, 25557, 17815, 31085</span> and <br> MD applicants <span class="important">18398, 7254, 18250, 15719, 16054, 28303, 21123, 29533, 26805, 28483, 30255, 23330, 20457, 25557, 28461, 17815, 17980, 31085</span> dont have any preference showing up on data thats why they may not show up on list<br><span class="important">We will keep on updating list as the gazette changes. Do inform us in comments.</span></p>
@@ -161,7 +161,7 @@
                 {
                     extend: 'pdfHtml5',
                     text: 'Download PDF',
-                    title : 'PRP '+default_filter.program+' List '+default_filter.hospital+' '+default_filter.speciality+' ',
+                    title : 'estimated_merit_list_based_on_official_gazette',
                     customize: function (doc) {
                         
                         let table = doc.content[1].table.body;
