--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <button class="schd-button lrgbtn" onmousedown="gotoUrl('schedule.html')"> View PRP Schedule </button>
         <button class="schd-button lrgbtn" onmousedown="gotoUrl('prev.html')"> View Previous Merit Lists </button>
         <button class="schd-button lrgbtn" onmousedown="gotoUrl('scrutiny.html')"> View 2025 Grievance List </button>
-        <button class="schd-button lrgbtn" onmousedown="gotoUrl('/prp-site/2025/index.html')"> View unofficial Gazette 2025 </button>
+        <button class="schd-button lrgbtn" onmousedown="gotoUrl('/prp-site/2025/index.html')"> View Gazette 2025 </button>
       </div>    
       <h3 class="linkableunderline" onclick="gotoComment()"> Wanna Leave a comment for developer? Click here!</h3>
       <!--
