--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
           <!--<h3 class="alert-title">Merit List Issue</h3>-->
           <p class="alert-content">Click on consent to check their consent</p>
           <!--<h3 class="alert-title">Merit List Updated</h3>-->
-          <!--<p class="alert-content">Merit list is updated according to recent gazette 13/1/25 4:15pm, to see changes in gazette, click <span class="linkableunderline" onclick="gotoUrl('changes.html')">here</span><br><strong>Note:</strong> <span class="important"> These changes might not apparent in gazette on PRP but might show up in few hours or one day</span></p>-->
-        </div>
+          <p class="alert-content"><span class="linkableunderline" onclick="gotoUrl('upgrade.html')">Click here to see changes in upcoming list</span></p>
         </h3>
+      </div>
       <h4 class="seats"> Seats Occupied: <span class="important" id="occupied">1</span> / <strong id="total"> 2 </strong></h4>
       <div class="filters">
         <select
