--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </label><span class="slidertext"> 2025 Unofficial Merit List</span> 
       </div>  
        -->
-        <h3 class="title">2nd Official Merit List</h3>
+        <h3 class="title">3rd Official Merit List</h3>
         <div class="alert">
           <!--<h3 class="alert-title">Merit List Issue</h3>-->
           <p class="alert-content">Click on consent to check their consent</p>
