--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
         <div class="alert">
           <!--<h3 class="alert-title">Merit List Issue</h3>-->
           <p class="alert-content">Click on consent to check their consent</p>
-          <!--<h3 class="alert-title">Upcoming 4th Merit List estimated changes</h3>-->
-          <!--<p class="alert-content"><span class="linkableunderline" onclick="gotoUrl('upgrade.html')">Click here to see changes in upcoming list</span></p>-->
+          <h3 class="alert-title">Upcoming 5th Merit List estimated changes</h3>
+          <p class="alert-content"><span class="linkableunderline" onclick="gotoUrl('upgrade.html')">Click here to see changes in upcoming list</span></p>
         </h3>
       </div>
       <h4 class="seats"> Seats Occupied: <span class="important" id="occupied">1</span> / <strong id="total"> 2 </strong></h4>
