--- a/upgrade.html
+++ b/upgrade.html
@@ -31,13 +31,13 @@
       
     <div class="info">
         <h1 id="hospital-name">
-            Changes in Upcoming 4th Merit List
+            Changes in Upcoming 5th Merit List
         </h1>
         <div class="share-link">
           <div class="share" onmousedown="shareUrl()"><img src="share.png"></div>
         </div>
         <p>
-            Changes expected in Upcoming 4th Merit List. <small class="small-heading">Note this is just an estimation can be wrong</small>
+            Changes expected in Upcoming 5th Merit List. <small class="small-heading">Note this is just an estimation can be wrong, <br><strong class='important'> based on consents till 7:50pm</strong></small>
           </p>
         
 
