--- a/upgrade.html
+++ b/upgrade.html
@@ -37,7 +37,7 @@
           <div class="share" onmousedown="shareUrl()"><img src="share.png"></div>
         </div>
         <p>
-            Changes expected in Upcoming 5th Merit List. <small class="small-heading">Note this is just an estimation can be wrong, <br><strong class='important'> based on consents till 7:50pm</strong></small>
+            Changes expected in Upcoming 5th Merit List. <small class="small-heading">Note this is just an estimation can be wrong, 66 people gave consent from last updated changes.<br>meaning Last list had 122 changes, which is now reduced to 66., cuz they didnot give consent. <br><strong class='important'> based on consents till 29/1/25 12:00am</strong></small>
           </p>
         
 
