--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <div class="navbar notif" id="notif">
-      This is the Official Fourth Merit List of <span class='important'>2025 Jan</span> Induction<br>Accuracy of estimated merit list has been displayed below</div>
+      This is the Official Fifth Merit List of <span class='important'>2025 Jan</span> Induction<br>Accuracy of estimated merit list has been displayed below</div>
         <br>
         <nav class="navbar">
       <div class="logo-container">
@@ -64,12 +64,12 @@
         </label><span class="slidertext"> 2025 Unofficial Merit List</span> 
       </div>  
        -->
-        <h3 class="title">4th Official Merit List</h3>
+        <h3 class="title">5th Official Merit List</h3>
         <div class="alert">
           <!--<h3 class="alert-title">Merit List Issue</h3>-->
           <p class="alert-content">Click on consent to check their consent</p>
-          <h3 class="alert-title">Upcoming 5th Merit List estimated changes</h3>
-          <p class="alert-content"><span class="linkableunderline" onclick="gotoUrl('upgrade.html')">Click here to see changes in upcoming list</span></p>
+          <!--<h3 class="alert-title">Upcoming 5th Merit List estimated changes</h3>-->
+          <!--<p class="alert-content"><span class="linkableunderline" onclick="gotoUrl('upgrade.html')">Click here to see changes in upcoming list</span></p>-->
         </h3>
       </div>
       <h4 class="seats"> Seats Occupied: <span class="important" id="occupied">1</span> / <strong id="total"> 2 </strong></h4>
@@ -164,7 +164,7 @@
                 {
                     extend: 'pdfHtml5',
                     text: 'Download PDF',
-                    title : 'estimated_merit_list_based_on_official_gazette',
+                    title : '5th_merit_list',
                     customize: function (doc) {
                         
                         let table = doc.content[1].table.body;
