--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <div class="navbar notif" id="notif">
-      This is the Official Sixth Merit List of <span class='important'>2025 Jan</span> Induction<br>Accuracy of estimated merit list has been displayed below</div>
+      This is the Official Eighth Merit List of <span class='important'>2025 Jan</span> Induction<br>Accuracy of estimated merit list has been displayed below</div>
         <br>
         <nav class="navbar">
       <div class="logo-container">
@@ -53,7 +53,7 @@
         <button class="schd-button lrgbtn" onmousedown="gotoUrl('schedule.html')"> View PRP Schedule </button>
         <button class="schd-button lrgbtn" onmousedown="gotoUrl('prev.html')"> View Previous Merit Lists </button>
         <button class="schd-button lrgbtn" onmousedown="gotoUrl('scrutiny.html')"> View 2025 Grievance List </button>
-        <button class="schd-button lrgbtn" onmousedown="gotoUrl('/prp-site/2025/index.html')"> View Gazette 2025 </button>
+        <button class="schd-button lrgbtn" onmousedown="gotoUrl('/prp-site/2025/index.html')"> View unofficial Feb 2025 Gazette </button>
       </div>    
       <h3 class="linkableunderline" onclick="gotoComment()"> Wanna Leave a comment for developer? Click here!</h3>
       <!--
@@ -64,10 +64,12 @@
         </label><span class="slidertext"> 2025 Unofficial Merit List</span> 
       </div>  
        -->
-        <h3 class="title">6th Official Merit List</h3>
+      
+       <div class='alert-small'>Unofficial Gazette of Feb Induction for MS/MD candidates have been uploaded</span>
+        <h3 class="title">8th Official Merit List</h3>
         <div class="alert">
           <!--<h3 class="alert-title">Merit List Issue</h3>-->
-          <p class="alert-content">Only FCPS 6th merit list has been uploaded<br>Click on consent to check their consent in ongoing (6th round)<br><span class='important'> Do tell us if someone consent doesnot match on their profile and here!</span></p>
+          <p class="alert-content"><br>Only FCPS 8th merit list has been uploaded<br>Click on consent to check their consent in ongoing (8th round)<br><span class='important'> Do tell us if someone consent doesnot match on their profile and here!</span></p>
           <!--<h3 class="alert-title">Upcoming 5th Merit List estimated changes</h3>-->
           <!--<p class="alert-content"><span class="linkableunderline" onclick="gotoUrl('upgrade.html')">Click here to see changes in upcoming list</span></p>-->
         </h3>
