--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       </div>  
        -->
       
-       <div class='alert-small'>Unofficial Gazette of Feb Induction for MS/MD candidates have been uploaded</span>
+       <div class='alert-small'>Unofficial Gazette of Feb Induction for MS/MD candidates have been uploaded</div>
         <h3 class="title">8th Official Merit List</h3>
         <div class="alert">
           <!--<h3 class="alert-title">Merit List Issue</h3>-->
