--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <div class="navbar notif" id="notif">
-      This is the Official Eighth Merit List of <span class='important'>2025 Jan</span> Induction<br>Accuracy of estimated merit list has been displayed below</div>
+      This is the Official Ninth Merit List of <span class='important'>2025 Jan</span> Induction<br>Accuracy of estimated merit list has been displayed below</div>
         <br>
         <nav class="navbar">
       <div class="logo-container">
@@ -66,10 +66,10 @@
        -->
       
        <div class='alert-small'>Unofficial Gazette of Feb Induction for MS/MD candidates have been uploaded</div>
-        <h3 class="title">8th Official Merit List</h3>
+        <h3 class="title">9th Official Merit List</h3>
         <div class="alert">
           <!--<h3 class="alert-title">Merit List Issue</h3>-->
-          <p class="alert-content"><br>Only FCPS 8th merit list has been uploaded<br>Click on consent to check their consent in ongoing (8th round)<br><span class='important'> Do tell us if someone consent doesnot match on their profile and here!</span></p>
+          <p class="alert-content"><br>Only FCPS 9th merit list has been uploaded<br>Click on consent to check their consent in ongoing (9th round)<br><span class='important'> Do tell us if someone consent doesnot match on their profile and here!</span></p>
           <!--<h3 class="alert-title">Upcoming 5th Merit List estimated changes</h3>-->
           <!--<p class="alert-content"><span class="linkableunderline" onclick="gotoUrl('upgrade.html')">Click here to see changes in upcoming list</span></p>-->
         </h3>
