--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <div class="navbar notif" id="notif">
-      This is the Official Ninth Merit List of <span class='important'>2025 Jan</span> Induction<br>Accuracy of estimated merit list has been displayed below</div>
+      This is the Official Tenth Merit List of <span class='important'>2025 Jan</span> Induction<br>Accuracy of estimated merit list has been displayed below</div>
         <br>
         <nav class="navbar">
       <div class="logo-container">
@@ -53,7 +53,11 @@
         <button class="schd-button lrgbtn" onmousedown="gotoUrl('schedule.html')"> View PRP Schedule </button>
         <button class="schd-button lrgbtn" onmousedown="gotoUrl('prev.html')"> View Previous Merit Lists </button>
         <button class="schd-button lrgbtn" onmousedown="gotoUrl('scrutiny.html')"> View 2025 Grievance List </button>
-        <button class="schd-button lrgbtn" onmousedown="gotoUrl('/prp-site/2025/index.html')"> View unofficial Feb 2025 Gazette </button>
+        <br>
+        <h3 class="simple-text">Unofficial <small class='important'> click on buttons below</small></h3>
+        <button class="schd-button lrgbtn unofficial" onmousedown="gotoUrl('/prp-site/2025/index.html')">Feb 2025 Gazette </button>
+        
+        <button class="schd-button lrgbtn unofficial" onmousedown="gotoUrl('/prp-site/2025/merit.html')">Feb 2025 Merit </button>
       </div>    
       <h3 class="linkableunderline" onclick="gotoComment()"> Wanna Leave a comment for developer? Click here!</h3>
       <!--
@@ -65,11 +69,11 @@
       </div>  
        -->
       
-       <div class='alert-small'>Unofficial Gazette of Feb Induction for MS/MD candidates have been uploaded</div>
-        <h3 class="title">9th Official Merit List</h3>
+       <div class='alert-small'>Unofficial Gazette and Merit of Feb Induction for MS/MD candidates have been uploaded</div>
+        <h3 class="title">10th Official Merit List</h3>
         <div class="alert">
           <!--<h3 class="alert-title">Merit List Issue</h3>-->
-          <p class="alert-content"><br>Only FCPS 9th merit list has been uploaded<br>Click on consent to check their consent in ongoing (9th round)<br><span class='important'> Do tell us if someone consent doesnot match on their profile and here!</span></p>
+          <p class="alert-content"><br>Only FCPS 10th merit list has been uploaded<br><span class='important'></span></p>
           <!--<h3 class="alert-title">Upcoming 5th Merit List estimated changes</h3>-->
           <!--<p class="alert-content"><span class="linkableunderline" onclick="gotoUrl('upgrade.html')">Click here to see changes in upcoming list</span></p>-->
         </h3>
