--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
         <button class="schd-button lrgbtn unofficial" onmousedown="gotoUrl('/prp-site/2025/index.html')">Feb 2025 Gazette </button>
         
         <button class="schd-button lrgbtn unofficial" onmousedown="gotoUrl('/prp-site/2025/merit.html')">Feb 2025 Merit </button>
+        <button class="schd-button lrgbtn unofficial" onmousedown="gotoUrl('/prp-site/2025/rejection.html')">Feb 2025 Scrutiny</button>
       </div>    
       <h3 class="linkableunderline" onclick="gotoComment()"> Wanna Leave a comment for developer? Click here!</h3>
       <!--
