--- a/index.html
+++ b/index.html
@@ -52,11 +52,10 @@
       <div>
         <button class="schd-button lrgbtn" onmousedown="gotoUrl('schedule.html')"> View PRP Schedule </button>
         <button class="schd-button lrgbtn" onmousedown="gotoUrl('prev.html')"> View Previous Merit Lists </button>
-        <button class="schd-button lrgbtn" onmousedown="gotoUrl('scrutiny.html')"> View 2025 Grievance List </button>
+        <button class="schd-button lrgbtn" onmousedown="gotoUrl('scrutiny.html')"> View 2025 Grievance List </button>        
+        <button class="schd-button lrgbtn" onmousedown="gotoUrl('/prp-site/2025/index.html')">Feb 2025 Gazette </button>
         <br>
-        <h3 class="simple-text">Unofficial <small class='important'> click on buttons below</small></h3>
-        <button class="schd-button lrgbtn unofficial" onmousedown="gotoUrl('/prp-site/2025/index.html')">Feb 2025 Gazette </button>
-        
+        <h3 class="simple-text">Unofficial <small class='important'> click on buttons below</small></h3>        
         <button class="schd-button lrgbtn unofficial" onmousedown="gotoUrl('/prp-site/2025/merit.html')">Feb 2025 Merit </button>
         <button class="schd-button lrgbtn unofficial" onmousedown="gotoUrl('/prp-site/2025/rejection.html')">Feb 2025 Scrutiny</button>
       </div>    
