--- a/speciality.html
+++ b/speciality.html
@@ -23,9 +23,17 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <nav class="navbar">
-      <div class="logo-container">
-        <img class="logo"  onclick="gotoUrl()" src="logo.png" />
+    <nav class="navbar main-navbar">
+      <div class="nav-content">
+        <div class="logo-container">
+          <img class="logo" onclick="gotoUrl()" src="logo.png" />
+        </div>
+        <ul class="nav-links">
+          <li><a href="index.html" class="active">Home</a></li>
+          <li><a href="hospital.html">Hospitals</a></li>
+          <li><a href="speciality.html">Specialities</a></li>
+          <li><a href="schedule.html">Schedule</a></li>
+        </ul>
       </div>
     </nav>
     <div class="main_container">
