--- a/hospital.html
+++ b/hospital.html
@@ -22,9 +22,17 @@
     <script src="https://cdn.datatables.net/v/dt/dt-2.0.8/b-3.0.2/b-html5-3.0.2/datatables.min.js"></script>
   </head>
   <body>
-    <nav class="navbar">
-      <div class="logo-container">
-        <img class="logo"  onclick="gotoUrl()" src="logo.png" />
+    <nav class="navbar main-navbar">
+      <div class="nav-content">
+        <div class="logo-container">
+          <img class="logo" onclick="gotoUrl()" src="logo.png" />
+        </div>
+        <ul class="nav-links">
+          <li><a href="index.html" class="active">Home</a></li>
+          <li><a href="hospital.html">Hospitals</a></li>
+          <li><a href="speciality.html">Specialities</a></li>
+          <li><a href="schedule.html">Schedule</a></li>
+        </ul>
       </div>
     </nav>
     
