--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
 
         <h3 class="simple-text">Unofficial <small class='important'> click on buttons below</small></h3>        
         <button class="schd-button lrgbtn" onmousedown="gotoUrl('/prp-site/2025/index.html')">June Unofficial 2025 Gazette </button>
+        <button class="schd-button lrgbtn" onmousedown="gotoUrl('/scrutiny.html')"> View June Rejected List </button>
         <br>
         <!--
         <button class="schd-button lrgbtn unofficial" onmousedown="gotoUrl('/prp-site/2025/merit.html')">Feb 2025 Merit </button>
