--- a/scrutiny.html
+++ b/scrutiny.html
@@ -43,7 +43,7 @@
                 <th >Name</th>
                 <th>Reason</th>
                 
-                <th class="linkable">Scrutiny status cant be check right now</th>                
+                <th class="linkable">Scrutiny</th>                
               </tr>
             </thead>
             <tbody id="dataRows"></tbody>
