push qol changes

--- a/candidate.html
+++ b/candidate.html
@@ -9,16 +9,17 @@
   </head>
   <body>
     <!-- Modern Navigation Bar -->
-    <nav class="main-navbar">
+    <nav class="navbar main-navbar">
       <div class="nav-content">
         <div class="logo-container">
-          <img class="logo" onclick="window.location.href='index.html'" src="logo.png" alt="Logo" />
+          <img class="logo" onclick="gotoUrl()" src="logo.png" />
         </div>
         <ul class="nav-links">
           <li><a href="index.html">Home</a></li>
-          <li><a href="hospital.html">Hospitals</a></li>
-          <li><a href="speciality.html">Specialities</a></li>
+          <!--<li><a href="hospital.html">Hospitals</a></li>-->
+          <!--<li><a href="speciality.html">Specialities</a></li>-->
           <li><a href="schedule.html">Schedule</a></li>
+          <li><a href="prev.html">Previous Merit Lists</a></li>
         </ul>
       </div>
     </nav>
