--- a/hospital.html
+++ b/hospital.html
@@ -29,9 +29,10 @@
         </div>
         <ul class="nav-links">
           <li><a href="index.html" class="active">Home</a></li>
-          <li><a href="hospital.html">Hospitals</a></li>
-          <li><a href="speciality.html">Specialities</a></li>
+          <!--<li><a href="hospital.html">Hospitals</a></li>-->
+          <!--<li><a href="speciality.html">Specialities</a></li>-->
           <li><a href="schedule.html">Schedule</a></li>
+          <li><a href="prev.html">Previous Merit Lists</a></li>
         </ul>
       </div>
     </nav>
