--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
           <!--<li><a href="hospital.html">Hospitals</a></li>-->
           <!--<li><a href="speciality.html">Specialities</a></li>-->
           <li><a href="schedule.html">Schedule</a></li>
+          <li><a href="/prp-site/2025/index.html">Unofficial Hub</a></li>
           <li><a href="prev.html">Previous Merit Lists</a></li>
         </ul>
       </div>
@@ -64,10 +65,11 @@
        <!-- <button class="schd-button lrgbtn" onmousedown="gotoUrl('scrutiny.html')"> View 2025 Grievance List </button> -->
         
 
-        <h3 class="simple-text">Unofficial <small class='important'> click on buttons below</small></h3>        
+        <!--<h3 class="simple-text">Unofficial <small class='important'> click on buttons below</small></h3>        
+        <br>
         <button class="schd-button lrgbtn" onmousedown="gotoUrl('/prp-site/2025/index.html')">June Unofficial 2025 Gazette </button>
         <button class="schd-button lrgbtn" onmousedown="gotoUrl('/prp-site/scrutiny.html')"> View June Rejected List </button>
-        <br>
+        <br>-->
         <!--
         <button class="schd-button lrgbtn unofficial" onmousedown="gotoUrl('/prp-site/2025/merit.html')">Feb 2025 Merit </button>
         <button class="schd-button lrgbtn unofficial" onmousedown="gotoUrl('/prp-site/2025/rejection.html')">Feb 2025 Scrutiny</button>
