--- a/candidate.html
+++ b/candidate.html
@@ -88,6 +88,7 @@
           <option disabled selected value="">Select a program</option>
         </select>
       </div>
+      <div class="table-container">
       <table class="stat-table" style="width: 100%;" id="consentTable">
         <thead>
           <tr>
@@ -111,6 +112,7 @@
         </thead>
         <tbody id="dataRows"></tbody>
       </table>
+      </div>
       <div class="footer">
         <span>Made with 💓 in <strong>HTML</strong> &amp; <strong>JS</strong> by <img src="github.png" alt="github">reko-beep</span>
       </div>
