--- a/prev.html
+++ b/prev.html
@@ -104,6 +104,7 @@
           <option value="" elected>Hospital</option>
         </select>
       </div>
+      <div class="table-container">
       <table class="stat-table" style="width: 100%" id="statTable">
         <thead>
           <tr>
@@ -118,6 +119,7 @@
         </thead>
         <tbody id="dataRows"></tbody>
       </table>
+      </div>
       <div class="footer">
         <span>Made with 💓 in <strong>HTML</strong>  &  <strong>JS</strong> by <img src="github.png">reko-beep</span>
       </div>
