--- a/hospital.html
+++ b/hospital.html
@@ -97,6 +97,7 @@
         </div>
     </div>
     <p id="headline"> No Filter selected.</p>
+    <div class="table-container">
     <table class="stat-table" style="width: 100%" id="statTable">
       <thead>
         <tr>
@@ -111,6 +112,7 @@
       </thead>
       <tbody id="dataRows"></tbody>
     </table>
+    </div>
     <div class="footer">
       <span>Made with 💓 in <strong>HTML</strong>  &  <strong>JS</strong> by <img src="github.png">reko-beep</span>
     </div>
