--- a/schedule.html
+++ b/schedule.html
@@ -44,7 +44,7 @@
             </h1>
         </div>
         <button type="button" class="schd-button" onmousedown="updateSchedule()">Update Schedule</button>
-        
+        <div class="table-container">
         <table class="stat-table" style="width: 100%" id="statTable">
             <thead>
               <tr>
@@ -56,6 +56,7 @@
             </thead>
             <tbody id="dataRows"></tbody>
           </table>
+          </div>
           <div class="footer">
             <span>Made with 💓 in <strong>HTML</strong>  &  <strong>JS</strong> by <img src="github.png">reko-beep</span>
           </div>
