--- a/scrutiny.html
+++ b/scrutiny.html
@@ -45,7 +45,7 @@
             </h1>
         </div>
       
-        
+        <div class="table-container">
         <table class="stat-table" style="width: 100%" id="statTable">
             <thead>
               <tr>
@@ -58,6 +58,7 @@
             </thead>
             <tbody id="dataRows"></tbody>
           </table>
+          </div>
           <div class="footer">
             <span>Made with 💓 in <strong>HTML</strong>  &  <strong>JS</strong> by <img src="github.png">reko-beep</span>
           </div>
