--- a/speciality.html
+++ b/speciality.html
@@ -94,6 +94,7 @@
         </div>
     </div>
     <p id="headline"> No Filter selected.</p>
+    <div class="table-container"></div>
     <table class="stat-table" style="width: 100%" id="statTable">
       <thead>
         <tr>
@@ -108,6 +109,7 @@
       </thead>
       <tbody id="dataRows"></tbody>
     </table>
+    </div>
     <div class="footer">
       <span>Made with 💓 in <strong>HTML</strong>  &  <strong>JS</strong> by <img src="github.png">reko-beep</span>
     </div>
