--- a/hospital.html
+++ b/hospital.html
@@ -204,7 +204,7 @@
           { width: "5%" },
           { width: "5%" },
         ],
-        order: [[2, 'asc']]
+        order: [[6, 'asc']],
       });
       for (key in default_filter) {
       const ele = document.getElementById(key);
