--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       </div>
     </nav>
     <div class="navbar notif" id="notif">
-      This is estimated merit list based on official Gazette<br>Correctly placed candidates from unofficial merit list, similarity of current merit list to unofficial merit list is show below
+      This is estimated merit list based on official Gazette of 2025 July<br>Correctly placed candidates from unofficial merit list, similarity of current merit list to unofficial merit list is show below
     </div>
 
     <div class="main_container" style="width: 80%">
