--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                 {
                     extend: 'pdfHtml5',
                     text: 'Download PDF',
-                    title : '5th_merit_list',
+                    title : 'estimatedmeritlist',
                     customize: function (doc) {
                         
                         let table = doc.content[1].table.body;
